# shelly-cli

./: Cargo.toml  README.md
integrations/: hyprland.conf
integrations/hyprland/: execs.conf  keybinds.conf
integrations/hyprland/scripts/: appdev_setup.sh
integrations/hyprlock/: colors.conf
src/: cli.rs  config.rs  main.rs
src/commands/: integration.rs  ipc.rs  list.rs  mod.rs  notify.rs  prefs.rs  screen.rs  shell.rs  wallpaper.rs  welcome.rs
